[gd_scene load_steps=38 format=2]

[ext_resource path="res://Entities/Skeleton/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://Entities/Skeleton/skeleton_up_attack_2.png" type="Texture" id=2]
[ext_resource path="res://Entities/Skeleton/skeleton_right_walk_2.png" type="Texture" id=3]
[ext_resource path="res://Entities/Skeleton/skeleton_right_walk_1.png" type="Texture" id=4]
[ext_resource path="res://Entities/Skeleton/skeleton_down_walk_1.png" type="Texture" id=5]
[ext_resource path="res://Entities/Skeleton/skeleton_right_attack_1.png" type="Texture" id=6]
[ext_resource path="res://Entities/Skeleton/skeleton_death_1.png" type="Texture" id=7]
[ext_resource path="res://Entities/Skeleton/skeleton_down_idle_1.png" type="Texture" id=8]
[ext_resource path="res://Entities/Skeleton/skeleton_death_6.png" type="Texture" id=9]
[ext_resource path="res://Entities/Skeleton/skeleton_down_walk_2.png" type="Texture" id=10]
[ext_resource path="res://Entities/Skeleton/skeleton_down_idle_2.png" type="Texture" id=11]
[ext_resource path="res://Entities/Skeleton/skeleton_left_attack_1.png" type="Texture" id=12]
[ext_resource path="res://Entities/Skeleton/skeleton_left_walk_2.png" type="Texture" id=13]
[ext_resource path="res://Entities/Skeleton/skeleton_left_attack_2.png" type="Texture" id=14]
[ext_resource path="res://Entities/Skeleton/skeleton_right_idle_1.png" type="Texture" id=15]
[ext_resource path="res://Entities/Skeleton/skeleton_left_idle_2.png" type="Texture" id=16]
[ext_resource path="res://Entities/Skeleton/skeleton_death_5.png" type="Texture" id=17]
[ext_resource path="res://Entities/Skeleton/skeleton_death_3.png" type="Texture" id=18]
[ext_resource path="res://Entities/Skeleton/skeleton_right_idle_2.png" type="Texture" id=19]
[ext_resource path="res://Entities/Skeleton/skeleton_up_idle_2.png" type="Texture" id=20]
[ext_resource path="res://Entities/Skeleton/skeleton_death_2.png" type="Texture" id=21]
[ext_resource path="res://Entities/Skeleton/skeleton_up_walk_1.png" type="Texture" id=22]
[ext_resource path="res://Entities/Skeleton/skeleton_up_idle_1.png" type="Texture" id=23]
[ext_resource path="res://Entities/Skeleton/skeleton_down_attack_2.png" type="Texture" id=24]
[ext_resource path="res://Entities/Skeleton/skeleton_left_idle_1.png" type="Texture" id=25]
[ext_resource path="res://Entities/Skeleton/skeleton_death_4.png" type="Texture" id=26]
[ext_resource path="res://Entities/Skeleton/skeleton_up_walk_2.png" type="Texture" id=27]
[ext_resource path="res://Entities/Skeleton/skeleton_up_attack_1.png" type="Texture" id=28]
[ext_resource path="res://Entities/Skeleton/skeleton_left_walk_1.png" type="Texture" id=29]
[ext_resource path="res://Entities/Skeleton/skeleton_right_attack_2.png" type="Texture" id=30]
[ext_resource path="res://Entities/Skeleton/skeleton_down_attack_1.png" type="Texture" id=31]
[ext_resource path="res://Sounds/attack.wav" type="AudioStream" id=32]
[ext_resource path="res://Sounds/death.wav" type="AudioStream" id=33]
[ext_resource path="res://Entities/Skeleton/HealthBar.gd" type="Script" id=34]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "down_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 20 ) ],
"loop": true,
"name": "up_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 31 ), ExtResource( 24 ) ],
"loop": false,
"name": "down_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 17 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 7 ) ],
"loop": false,
"name": "birth",
"speed": 7.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 27 ) ],
"loop": true,
"name": "up_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 3 ) ],
"loop": true,
"name": "right_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 6 ), ExtResource( 30 ) ],
"loop": false,
"name": "right_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 13 ) ],
"loop": true,
"name": "left_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": false,
"name": "left_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 19 ) ],
"loop": true,
"name": "right_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "down_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 16 ) ],
"loop": true,
"name": "left_idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 28 ), ExtResource( 2 ) ],
"loop": false,
"name": "up_attack",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 26 ), ExtResource( 17 ), ExtResource( 9 ) ],
"loop": false,
"name": "death",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 7 )

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )
animation = "down_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )

[node name="SoundAttack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 32 )
volume_db = 6.0

[node name="SoundDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 33 )
volume_db = 6.0

[node name="Health" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -13.0
margin_right = 10.0
margin_bottom = -9.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_top = 1.0
margin_right = 19.0
margin_bottom = 3.0
color = Color( 1, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="skeleton_stats_changed" from="." to="Health" method="_on_Skeleton_skeleton_stats_changed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
